# cspx

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: bench.yml  ci.yml
benchmarks/baseline/: bench-metrics-baseline.json
crates/cspx-cli/: Cargo.toml
crates/cspx-cli/src/: main.rs
crates/cspx-cli/tests/: golden.rs  parallel_options.rs  schema_validation.rs  summary_json.rs
crates/cspx-core/: Cargo.toml
crates/cspx-problems/: Cargo.toml
crates/cspx-problems/src/: main.rs
docs/: architecture.md  bench-baseline.md  cli.md  explainability.md  fd-optimization-backlog.md  fd-parallel-por-spike.md  frontend.md  ir.md  result-json.md  scale.md  system-overview.md  validation-report-2026-02-07.md  validation-report-2026-02-09.md  validation-report.md
docs/integrations/: ae-framework.md
problems/: README.md
problems/P000_hello_typecheck_pass/: expect.yaml  model.cspm  notes.md  problem.yaml
problems/P001_syntax_error/: model.cspm  notes.md  problem.yaml
problems/P002_duplicate_identifier/: model.cspm  notes.md  problem.yaml
problems/P002_undefined_identifier/: expect.yaml  model.cspm  notes.md  problem.yaml
problems/P003_invalid_identifier/: expect.yaml  model.cspm  notes.md  problem.yaml
problems/P003_type_error_channel_payload_out_of_range/: expect.yaml  model.cspm  notes.md  problem.yaml
problems/P004_unsupported_feature/: expect.yaml  model.cspm  notes.md  problem.yaml
schemas/: csp-summary.schema.json  cspx-result.schema.json  expect.schema.json  problem.schema.json
scripts/: bench-baseline  run-problems
(+164 files in other folders)
