[workspace]
members = ["crates/cspx-cli", "crates/cspx-core", "crates/cspx-problems"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
jsonschema = "0.17"
regex = "1.10"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
wait-timeout = "0.2"
