[package]
name = "cspx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
cspx-core = { path = "../cspx-core" }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
jsonschema = "0.17"
predicates = "3.1"
tempfile = "3.10"
